SERVER-67764 simplify globalMetricTree singleton to fix coverity memory leak